--- a/main2.css
+++ b/main2.css
@@ -7,7 +7,7 @@ lable.logo{
     line-height: 50px
     padding: 30px;
     text-decoration: none;
-    font-size: 45px;        
+    font-size: 50px;       
 }
 
 .topnav {
@@ -22,7 +22,7 @@ lable.logo{
     text-align: center;
     padding: 30px;
     text-decoration: none;
-    font-size: 17px;
+    font-size: 50px;
   }
   
  
@@ -71,11 +71,44 @@ lable.logo{
   }
   
 
+
+  * {
+    box-sizing: border-box;
+  }
+  
+  .container {
+    padding: 64px;
+  }
+  
+  /* Clear floats */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both
+  }
+  
+  /* 2/3 column */
+  .column-66 {
+    float: left;
+    width: 66.66666%;
+    padding: 20px;
+  }
+  
+  /* 1/3 column */
+  .column-33 {
+    float: left;
+    width: 33.33333%;
+    padding: 20px;
+  }
+  
+  /* Add responsiveness - make the columns appear on top of each other instead of next to each other on small screens */
+  @media screen and (max-width: 1000px) {
+    .column-66,
+    .column-33 {
+      width: 100%;
+      text-align: center;
+    }
+  }
+
 </style>
 
-heading
-h2{
-    color:rgb(186, 110, 29);
-
-        font-size: 20px;          
-}
