--- a/main2.css
+++ b/main2.css
@@ -1,3 +1,12 @@
+
+body {
+  font-family:'Trebuchet MS';
+  margin: 0;
+  padding: 0;
+  background-color: #dabcbca0;
+}
+
+
 /* Navigation Bar */
 .topnav a {
   float: left;
@@ -10,18 +19,18 @@
 
 .topnav a:hover {
   background-color: #8a7d7d;
-  color: black;
+  color: rgb(233, 221, 221);
 }
 
 .topnav a.active {
   background-color: #8a7d7d;
-  color: rgb(156, 52, 52);
+  color: rgba(134, 134, 134, 0.764);
 }
 
 /* Navigation Bar */
 .nav ul {
     list-style: none;
-    background-color: #8a7d7d;
+    background-color: #6f63631f;
     text-align: center;
     padding: 0.7%;
     margin: 0%;
@@ -35,17 +44,25 @@
 /* Navigation Bar Font */
 .nav a {
     text-decoration: none; /* Updated to a valid value */
-    color: rgb(0, 0, 0);
+    color: #fff;
     width: 180px;
     display: block;
     font-size: 20px;
-    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
+    font-family: 'Trebuchet MS';
 }
 
 /*Cursor hover*/
 .nav a:hover {
     background-color: #c7a17b;
     transition: 0.10s;
+}
+
+.footer {
+  text-align: center;
+  margin-top: 30px;
+  padding: 10px;
+  background-color: #6f636329;
+  color: #fff;
 }
 
 /* Main Page */
